--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
   <title>Event Handling Example</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: Papyrus, fantasy;
       display: flex;
       justify-content: center;
       align-items: center;
       height: 100vh;
       margin: 0;
       background-image: url("background.png");
+      position: relative;
     }
     .button-container {
       position: relative;
