--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
       height: 100vh;
       margin: 0;
       background-image: url("background.png");
-      position: relative;
+      background-size: cover;
+      background-position: centre;
+      background-repeat: no-repeat;
+      position: relative
     }
     .button-container {
       position: relative;
